Frontend dockerfile updated

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,15 +1,23 @@
-FROM node:14
+# Use an official Node runtime as a parent image
+FROM node:18
 
+# Set the working directory in the container
 WORKDIR /app
 
+# Copy the package.json and package-lock.json files to the working directory
 COPY package.json package-lock.json ./
 
+# Install the project dependencies
 RUN npm install
 
+# Copy the rest of the application code to the working directory
 COPY . .
 
+# Build the app
 RUN npm run build
 
+# Expose port 3000 to the outside world
 EXPOSE 3000
 
-CMD ["npm", "start"]
+# Start the app
+CMD ["npm", "run", "preview"]
