--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,3 +1,5 @@
+# Development Dockerfile
+
 # Use an official Node runtime as a parent image
 FROM node:18
 
@@ -13,11 +15,8 @@ RUN npm install
 # Copy the rest of the application code to the working directory
 COPY . .
 
-# Build the app
-RUN npm run build
-
 # Expose port 3000 to the outside world
 EXPOSE 3000
 
 # Start the app
-CMD ["npm", "run", "preview"]
+CMD ["npm", "run", "dev"]
