--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,34 @@
-FROM python:3.9
+# Use an official Python runtime as a parent image
+FROM python:3.11-slim
 
+# Set environment variables
+ENV POETRY_VERSION=1.8.3
+ENV PYTHONUNBUFFERED=1
+
+# Set the working directory
 WORKDIR /app
 
-COPY requirements.txt .
+# Install Poetry
+RUN apt-get update && \
+    apt-get install -y curl && \
+    curl -sSL https://install.python-poetry.org | python3 - && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN pip install --no-cache-dir -r requirements.txt
+# Add Poetry to PATH
+ENV PATH="/root/.local/bin:${PATH}"
 
-COPY ./app /app
+# Copy pyproject.toml and poetry.lock to the working directory
+COPY pyproject.toml poetry.lock ./
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Install dependencies
+RUN poetry install --no-root --only main
+
+# Copy the entire project to the working directory
+COPY . .
+
+# Expose the port FastAPI runs on
+EXPOSE 8000
+
+# Run the prestart script and start the FastAPI server
+CMD ["bash", "-c", "poetry run bash ./app/prestart.sh && poetry run uvicorn app.main:app --host 0.0.0.0 --port 8000"]
