--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,61 @@
-services:
-  traefik:
-    image: traefik:v2.4
-    command:
-      - "--api.insecure=true"
-      - "--providers.docker=true"
-      - "--entrypoints.web.address=:80"
-    ports:
-      - "80:80"
-      - "8080:8080"
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
+version: '3.8'
 
+services:
   backend:
-    build: ./backend
+    build:
+      context: ./backend
+    container_name: fastapi_app
+    ports:
+      - "8000:8000"
     depends_on:
       - db
-    labels:
-      - "traefik.http.routers.backend.rule=PathPrefix(`/api`)"
-      - "traefik.http.routers.backend.entrypoints=web"
-      - "traefik.http.services.backend.loadbalancer.server.port=8000"
+    env_file:
+      - ./backend/.env
 
   frontend:
-    build: ./frontend
-    labels:
-      - "traefik.http.routers.frontend.rule=PathPrefix(`/`)"
-      - "traefik.http.routers.frontend.entrypoints=web"
-      - "traefik.http.services.frontend.loadbalancer.server.port=3000"
+    build:
+      context: ./frontend
+    container_name: nodejs_app
+    ports:
+      - "5173:5173"
+    env_file:
+      - ./frontend/.env
 
   db:
-    image: postgres:13
-    environment:
-      POSTGRES_USER: username
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydatabase
+    image: postgres:latest
+    container_name: postgres_db
+    ports:
+      - "5432:5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+    env_file:
+      - ./backend/.env
 
   adminer:
     image: adminer
-    restart: always
+    container_name: adminer
     ports:
       - "8080:8080"
-    labels:
-      - "traefik.http.routers.adminer.rule=Host(`db.domain`)"
-      - "traefik.http.routers.adminer.entrypoints=web"
-      - "traefik.http.services.adminer.loadbalancer.server.port=8080"
+
+  proxy:
+    image: jc21/nginx-proxy-manager:latest
+    container_name: nginx_proxy_manager
+    ports:
+      - "80:80"
+      - "443:443"
+      - "81:81"
+    environment:
+      DB_SQLITE_FILE: "/data/database.sqlite"
+    volumes:
+      - ./data:/data
+      - ./letsencrypt:/etc/letsencrypt
+    depends_on:
+      - db
+      - backend
+      - frontend
+      - adminer
 
 volumes:
-  postgres-data:
-
+  postgres_data:
+  data:
+  letsencrypt:
