--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 # Development Dockerfile
 
 # Use an official Node runtime as a parent image
-FROM node:18
+FROM node:latest
 
 # Set the working directory in the container
 WORKDIR /app
@@ -19,4 +19,5 @@ COPY . .
 EXPOSE 5173
 
 # Start the app
-CMD ["npm", "run", "dev"]
+CMD ["npm", "run", "dev", "--", "--host"]
+
