--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,34 +1,26 @@
 # Use an official Python runtime as a parent image
-FROM python:3.11-slim
+FROM python:latest
 
-# Set environment variables
-ENV POETRY_VERSION=1.8.3
-ENV PYTHONUNBUFFERED=1
+# Install Node.js and npm
+RUN apt-get update && apt-get install -y \
+    nodejs \
+    npm
+
+# Install Poetry using pip
+RUN pip install poetry
 
 # Set the working directory
 WORKDIR /app
 
-# Install Poetry
-RUN apt-get update && \
-    apt-get install -y curl && \
-    curl -sSL https://install.python-poetry.org | python3 - && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
-
-# Add Poetry to PATH
-ENV PATH="/root/.local/bin:${PATH}"
-
-# Copy pyproject.toml and poetry.lock to the working directory
-COPY pyproject.toml poetry.lock ./
-
-# Install dependencies
-RUN poetry install --no-root --only main
-
-# Copy the entire project to the working directory
+# Copy the application files
 COPY . .
+
+# Install dependencies using Poetry
+RUN poetry install
 
 # Expose the port FastAPI runs on
 EXPOSE 8000
 
 # Run the prestart script and start the FastAPI server
-CMD ["bash", "-c", "poetry run bash ./app/prestart.sh && poetry run uvicorn app.main:app --host 0.0.0.0 --port 8000"]
+CMD ["sh", "-c", "poetry run bash ./prestart.sh && poetry run uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"]
+
